--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,14 @@
-# The Musical Bible (TMB) - .gitignore
+# API Keys & Credentials (민감한 정보)
+API_KEYS.txt
+*_CREDENTIALS.txt
+YOUTUBE_CREDENTIALS.txt
+*.env
+.env.*
 
-# 데이터베이스
+# Database files
 *.db
 *.sqlite
 *.sqlite3
-database/*.db
-
-# 출력 파일
-output/
-*.mp4
-*.mp3
-*.wav
-*.jpg
-*.png
-*.jpeg
-
-# 로그
-*.log
-logs/
-
-# 환경 변수
-.env
-.env.local
-.env.*.local
-
-# n8n 데이터
-.n8n/
-n8n_data/
 
 # Python
 __pycache__/
@@ -38,23 +20,27 @@ venv/
 env/
 ENV/
 
+# Node modules
+node_modules/
+
+# OS files
+.DS_Store
+Thumbs.db
+
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS
-.DS_Store
-Thumbs.db
+# Logs
+*.log
+logs/
 
-# 임시 파일
+# Temporary files
 tmp/
 temp/
 *.tmp
 
-# API 키 (보안)
-*_credentials.json
-*_api_key.txt
-secrets/
+# Railway secrets
+railway.json
